Ajout de la licence

--- a/README
+++ b/README
@@ -9,3 +9,12 @@ Basé sur ces articles :
 - http://rc3.org/2012/05/12/the-grammar-of-vim/
 - http://blog.carbonfive.com/2011/10/17/vim-text-objects-the-definitive-guide/
 - http://jamiecurle.co.uk/blog/vim-grammar/
+
+LICENCE
+-------
+
+Distribué sous licence :
+
+[Licence Creative Commons Paternité - Partage à l'Identique 3.0 non transposé](http://creativecommons.org/licenses/by-sa/3.0/)
+
+Cette licence **ne s'applique pas** aux articles sus-cités.
