--- a/vim-grammar.tex
+++ b/vim-grammar.tex
@@ -283,6 +283,18 @@ Merci à/au :
     \item Bram Moolenaar pour avoir écrit vim et Bill Joy pour vi
     \item vous pour l'écoute
 \end{itemize}
+
+{\bf Licence}
+
+\begin{center}
+    Distribué sous licence
+
+    Licence Creative Commons Paternité
+    
+    (Partage à l'Identique 3.0 non transposé)
+
+    \url{http://creativecommons.org/licenses/by-sa/3.0/}
+\end{center}
 \end{frame}
 
 \end{document}
